--- a/src/app/admin/liste-taches/liste-taches.component.scss
+++ b/src/app/admin/liste-taches/liste-taches.component.scss
@@ -12,4 +12,11 @@
     .table {
         padding: .7rem;
     }
+
+    .spanNonTache {
+        height: 50vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 }
