--- a/src/app/admin/statistique/statistique.component.scss
+++ b/src/app/admin/statistique/statistique.component.scss
@@ -30,6 +30,13 @@
     }
 
     .table {}
+
+    .spanNonTache {
+        height: 50vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 }
 
 @media screen and(max-width:1000px) {
