--- a/src/app/login-for-admin/login-for-admin.component.html
+++ b/src/app/login-for-admin/login-for-admin.component.html
@@ -6,16 +6,18 @@
 				<!--<span>AROSAINA</span>-->
 			</div>
 			<div class="input_form">
-				<label for="">Email :</label>
+				<label for="">Email *:</label>
 				<input type="text" class="form-control" placeholder="Votre email" formControlName="username">
+				<small *ngIf="loginForm.controls['username'].errors && loginForm.controls['username'].touched" class="text-danger">Email non valide(obligatoire @)</small>
 			</div>
 			<div class="input_form">
-				<label for="">Mot de passe :</label>
+				<label for="">Mot de passe *:</label>
 				<input type="password" class="form-control" name="" placeholder="Votre mot de passe"
 					formControlName="password">
+					<small *ngIf="loginForm.controls['password'].errors && loginForm.controls['password'].touched" class="text-danger">Mot de passe non valide(min 6 et max 14)</small>
 			</div>
 			<div class="input_form">
-				<button type="submit" class="btn btn-primary button ">Connexion</button>
+				<button type="submit" [disabled]="!loginForm.valid" class="btn btn-primary button ">Connexion</button>
 			</div>
 			<div class="footer">
 				<a href="" title="facebook"><i class=" bi bi-facebook"></i></a>
