--- a/src/app/admin/dasboard/backoofiche-dasboard/backoofiche-dasboard.component.html
+++ b/src/app/admin/dasboard/backoofiche-dasboard/backoofiche-dasboard.component.html
@@ -13,7 +13,8 @@
         </div>   
     </div>
     <div class="liste-table">
-        <table class="table table-bordered">
+        <span>List de tache traitée</span>
+        <table *ngIf="listereception.length > 0"  class="table table-bordered">
             <thead>
                 <tr>
                     <td>#</td>
@@ -25,7 +26,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let item of listereception | paginate:{itemsPerPage:10,currentPage:page,totalItems:totalPageItems} ; let i=index">
+                <tr *ngFor="let item of listereception | paginate:{itemsPerPage:8,currentPage:page,totalItems:totalPageItems} ; let i=index">
                     <td>{{i + 1}}</td>
                     <td>{{item.operationEntree.codeTache}}</td>
                     <td>{{item.operationEntree.user.nom}}</td>
@@ -37,8 +38,11 @@
                 </tr>
             </tbody>
         </table>
-        <div class="pagination">
+        <div *ngIf="listereception.length > 0" class="pagination">
             <pagination-controls (pageChange)="page=$event"></pagination-controls>
         </div> 
+    </div>
+    <div *ngIf="listereception.length == 0" class="spanNonTache">
+        <span>Aucun tache traitée</span>
     </div>
 </div>
