--- a/src/app/admin/dasboard/client-dasboard/client-dasboard.component.html
+++ b/src/app/admin/dasboard/client-dasboard/client-dasboard.component.html
@@ -10,8 +10,8 @@
       </div>
     </div>
     <div class="liste">
-      Liste de tache traitée
-        <table class="table table-bordered">
+        <span class="span">Liste de tache traitée</span>
+        <table *ngIf="listeTraitement.length > 0" class="table table-bordered">
           <thead>
               <tr>
                   <th>#</th>
@@ -21,7 +21,7 @@
               </tr>
           </thead>
           <tbody>
-              <tr *ngFor="let item of listeTraitement ; let i=index">
+              <tr *ngFor="let item of listeTraitement | paginate:{itemsPerPage:8,currentPage:page,totalItems:totalPageItems} ; ; let i=index">
                   <td>{{i + 1 }}</td>
                   <td>{{item.reception.operationEntree.codeTache }}</td>
                   <td>{{item.reception.operationEntree.status }}</td>
@@ -31,5 +31,11 @@
             </tr>
           </tbody>
         </table>
+        <div *ngIf="listeTraitement.length > 0" class="pagination">
+          <pagination-controls (pageChange)="page=$event"></pagination-controls>
+       </div>
+      <div *ngIf="listeTraitement.length == 0" class="spanNonTraiter">
+        <span>Aucune tache traiter</span>
+      </div>
     </div>
 </div>
