--- a/src/app/admin/dasboard/client-dasboard/client-dasboard.component.scss
+++ b/src/app/admin/dasboard/client-dasboard/client-dasboard.component.scss
@@ -13,4 +13,22 @@
             }
         }
     }
+
+    .liste {
+        .span {
+            font-weight: bold;
+            border-bottom: solid 1.5px grey;
+        }
+
+        .spanNonTraiter {
+            height: 40vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            span {
+                margin-left: 3rem;
+            }
+        }
+    }
 }
