--- a/src/app/admin/dasboard/dasboard.component.scss
+++ b/src/app/admin/dasboard/dasboard.component.scss
@@ -14,17 +14,18 @@
             box-shadow: 3px 3px whitesmoke;
             border: whitesmoke solid 3px;
             width: 100%;
-            height: 70px;
-            margin-left: 1.7rem;
+            height: 80px;
+            margin-left: .7rem;
 
             .stat-menu {
                 padding: .3rem;
+                display: flex;
             }
         }
     }
 
     .table-liste {
-        margin-left: 1.7rem;
+        margin-left: .7rem;
 
         .header-liste {
             display: flex;
@@ -52,7 +53,6 @@
                     width: 40%;
                     height: 2.5rem;
                 }
-
 
             }
 
@@ -82,6 +82,13 @@
         }
 
         .tableStat {}
+
+        .spanNonTache {
+            height: 50vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
     }
 
 }
