--- a/src/app/admin/facture/facture.component.scss
+++ b/src/app/admin/facture/facture.component.scss
@@ -23,10 +23,19 @@
 
     .liste {
         margin-top: 1rem;
+        height: 60vh;
+        overflow: auto;
 
         table {
             border-collapse: collapse;
             width: 100%;
         }
+    }
+
+    .afficheIsNot {
+        height: 50vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 }
