--- a/src/app/admin/reception-of-offiche/reception-of-offiche.component.html
+++ b/src/app/admin/reception-of-offiche/reception-of-offiche.component.html
@@ -2,7 +2,7 @@
     <div class="header">
         <span>Listes de taches</span>     
     </div>
-    <div class="table">
+    <div *ngIf="listereception.length > 0" class="table">
         <table class="table table-bordered">
             <thead>
                 <tr>
@@ -32,5 +32,8 @@
                 </tr>
             </tbody>
         </table>
+    </div>
+    <div *ngIf="listereception.length == 0" class="spanNonTache">
+        <span>Aucun tache selectionée! prendre nouveau tache</span>
     </div>
 </div>
