--- a/src/app/admin/statistique/statistique.component.html
+++ b/src/app/admin/statistique/statistique.component.html
@@ -14,7 +14,7 @@
             <span class="page">Total page: {{totalPageByClient}}</span>
         </div>
     </div>
-    <div class="table">
+    <div *ngIf="listeTache.length > 0" class="table">
         <table class="table table-bordered">
             <thead>
                 <tr>
@@ -25,7 +25,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let item of listeTache | paginate:{itemsPerPage:10,currentPage:page,totalItems:totalPageItems}">
+                <tr *ngFor="let item of listeTache | paginate:{itemsPerPage:7,currentPage:page,totalItems:totalPageItems}">
                     <td>{{item.id}}</td>
                     <td>{{item.reception!.operationEntree.codeTache}}</td>
                     <td>{{item.mots}}</td>
@@ -36,5 +36,8 @@
         <div class="pagination">
             <pagination-controls (pageChange)="page=$event"></pagination-controls>
         </div>
+    </div>
+    <div *ngIf="listeTache.length == 0" class="spanNonTache">
+        <span>Aucun tache</span>
     </div>
 </div>
