--- a/src/app/admin/tache-encors/tache-encors.component.html
+++ b/src/app/admin/tache-encors/tache-encors.component.html
@@ -1,6 +1,8 @@
 <div class="tache-encours">
-    <div class="header"></div>
-    <div class="liste">
+    <div class="header">
+        <span>Liste tache encours</span>
+    </div>
+    <div *ngIf="listeReception" class="liste">
         <table class="table table-hover table-bordered">
             <thead>
                 <tr>
@@ -24,4 +26,5 @@
             </tbody>           
         </table>
     </div>
+    
 </div>
