--- a/src/app/admin/tous-tache/tous-tache.component.scss
+++ b/src/app/admin/tous-tache/tous-tache.component.scss
@@ -54,4 +54,11 @@
     .table {
         margin-top: 1rem;
     }
+
+    .spanNonTache {
+        height: 50vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 }
