--- a/src/app/admin/utilisateur/utilisateur.component.html
+++ b/src/app/admin/utilisateur/utilisateur.component.html
@@ -10,14 +10,16 @@
                     <th>#</th>
                     <th>Nom</th>
                     <th>Email</th>
+                    <th>Role</th>
                     <th>Status</th>
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let item of user | paginate:{itemsPerPage:7,currentPage:page,totalItems:totalPageItems}">
+                <tr *ngFor="let item of user | paginate:{itemsPerPage:6,currentPage:page,totalItems:totalPageItems}">
                     <td>{{item.id}}</td>
                     <td>{{item.nom}}</td>
                     <td>{{item.email}}</td>
+                    <td>{{item.role[0].nomRole}}</td>
                     <td>
                         <button class="btn btn-sm" *ngIf="item.status==0" style="color: aquamarine;" title="activer"
                             (click)="desactiverCompter(item.id)" ><i
@@ -40,14 +42,17 @@
             <div class="form-group">
                 <label for="">Nom :</label>
                 <input type="text" formControlName="nom" class="form-control" placeholder="Nom utilisateur">
+                <small *ngIf="formUtilisateur.controls['nom'].errors && formUtilisateur.controls['nom'].touched" class="text-danger">Nom non valide(min 2)</small>
             </div>
             <div class="form-group">
                 <label for="">Email :</label>
                 <input type="text" formControlName="email"  class="form-control" placeholder="Email utilisateur">
+                <small *ngIf="formUtilisateur.controls['email'].errors && formUtilisateur.controls['email'].touched" class="text-danger">Email non valide(obligatoire @)</small>
             </div>
             <div class="form-group">
                 <label for="">Password :</label>
                 <input type="text" formControlName="password"  class="form-control" placeholder="Mot de passe utilisateur">
+                <small *ngIf="formUtilisateur.controls['password'].errors && formUtilisateur.controls['password'].touched" class="text-danger">Mot de passe non valide(min 6 et max 14)</small>
             </div>
             <div class="form-group">
                 <label for="">Role :</label>
@@ -59,7 +64,7 @@
                 </select>
             </div>
             <div class="form-group button">
-               <button type="submit" class="btn btn-primary form-control">Enregistrer</button>
+               <button [disabled]="!formUtilisateur.valid" type="submit" class="btn btn-primary form-control">Enregistrer</button>
                <a class="btn btn-danger form-control" (click)="annuller()">Annuller</a>
             </div>
         </form>
